--- a/css/screen.css
+++ b/css/screen.css
@@ -11,3 +11,27 @@ width: 1000px;
 height: 500px;
 }
 */
+
+body {
+font-size: 110%;
+background-color: #eef2f3;
+}
+
+input[type='text'] {
+font-size: 110%;
+border-radius: 2px;
+}
+
+
+button, input[type='button'], input[type='submit'] {
+background-color: rgba(76,150,193,1);
+}
+
+/* Style inputs, buttons, and page through CSS and not jQuery UI */
+
+
+section {
+margin: 5% 1%;
+}
+
+
