--- a/css/screen.css
+++ b/css/screen.css
@@ -4,27 +4,31 @@
   -webkit-box-sizing: border-box; 
   box-sizing: border-box;
  }
-
- /*
+ 
 iframe {
-width: 1000px;
-height: 500px;
+border: none;
 }
-*/
-
 
 body {
 font-size: 110%;
 background-color: #eef2f3;
+font-family: Verdana, Arial, sans-serif;
 }
 
 input[type='text'] {
 font-size: 110%;
-border-radius: 2px;
+border-radius: 4px;
+border: none;
+padding: .3%;
 }
 
 button, input[type='button'], input[type='submit'] {
 background-color: rgba(76,150,193,1);
+padding: .3%;
+color: white;
+font-weight: bold;
+border-radius: 5px;
+border: none;
 }
 
 /* Style inputs, buttons, and page through CSS and not jQuery UI */
