--- a/css/screen.css
+++ b/css/screen.css
@@ -6,52 +6,48 @@
  }
 
 body {
-font-size: 110%;
+font-size: 100%;
 background-color: #eef2f3;
 font-family: Verdana, Arial, sans-serif;
 padding: 1%;
 }
 
 input[type='text'] {
-font-size: 110%;
+font-size: 100%;
 border-radius: 4px;
 border: none;
-padding: .75%;
+padding: .5%;
 border: solid black 1px;
 }
 
 button, input[type='button'], input[type='submit'] {
 background-color: rgba(76,150,193,1);
-padding: .75%;
+padding: .5%;
 color: white;
 font-weight: bold;
 border-radius: 5px;
 border: none;
-font-size: 110%;
+font-size: 100%;
 }
-
 
 input, button, iframe {
 margin: .75%;
 }
 
+/* Size of url boxes */
 .website {
 width: 20em;
 max-width: 100%;
 }
 
-/* Size Parameters */
+/* Size of parameter boxes*/
 .sizePar {
 width: 8em;
 }
 
-/* Style inputs, buttons, and page through CSS and not jQuery UI */
-
-
 section {
 margin: 5% 1%;
 }
-
 
 iframe {
 border: none;
