--- a/css/screen.css
+++ b/css/screen.css
@@ -61,3 +61,38 @@ display: block;
 width: 98%;
 padding: 0%;
 }
+
+
+nav {
+background-color: inherit;
+padding: 2% 0 .5% 0;
+border-radius: 2px;
+font-weight: bold;
+color: white;
+font-size: 115%;
+}
+
+nav ul {
+list-style: none;
+margin: 0;
+padding: 0;
+}
+
+nav ul li {
+background-color: rgba(76,150,193,1);
+display: inline;
+padding: 1% 1% 1% 1%;
+margin: .25% .1% 0% .1%;
+border-radius: 4px;
+}
+
+nav ul li:hover {
+background-color: white;
+color: black;
+border: solid 2px rgba(76,150,193,1);
+}
+
+nav a {
+text-decoration: none;
+color: inherit;
+}
