--- a/css/screen.css
+++ b/css/screen.css
@@ -87,7 +87,7 @@ margin: .25% .1% 0% .1%;
 border-radius: 4px;
 }
 
-nav ul li:hover {
+nav ul li:hover, #specialButton:hover {
 background-color: white;
 color: black;
 border: solid 2px rgba(76,150,193,1);
@@ -96,6 +96,10 @@ border: solid 2px rgba(76,150,193,1);
 nav a {
 text-decoration: none;
 color: inherit;
+}
+
+#specialButton {
+background-color: #ea3004;
 }
 
 #userInput label {
