--- a/css/screen.css
+++ b/css/screen.css
@@ -126,6 +126,27 @@
     padding: 2%;
     }
 
+    /* Iframe for resizable tool */
+  
+    #rDisplay {
+    width: 98%;
+    padding: 5px 5px;
+    }
+
+  
+  /* Address lack of touch functionality for resizable tool */
+
+  @media (max-width: 800px) {
+   
+    #resizableInput {
+    display: none;
+    }
+  
+    #rescaleDiv {
+    display: none;
+    }
+  }
+  
   /* Form Factors */
   
   /* 
