Tweak to resizable frame visual.

--- a/css/screen.css
+++ b/css/screen.css
@@ -129,8 +129,8 @@
     /* Iframe for resizable tool */
   
     #rDisplay {
-    width: 98%;
-    padding: 5px 5px;
+    width: 99%;
+    padding: .02em .02em;
     }
 
   
