Edit text and tweak to CSS positioning.

--- a/css/screen.css
+++ b/css/screen.css
@@ -126,26 +126,26 @@
     padding: 2%;
     }
 
-    /* Iframe for resizable tool */
+    /* Iframe for resizeable tool */
   
-    #rDisplay {
-    width: 99%;
-    padding: .02em .02em;
-    }
+      #rDisplay {
+      width: 99%;
+      padding: .02em .02em;
+      }
 
   
-  /* Address lack of touch functionality for resizable tool */
+    /* Address lack of touch functionality for resizeable tool */
 
-  @media (max-width: 800px) {
-   
-    #resizableInput {
-    display: none;
-    }
-  
-    #rescaleDiv {
-    display: none;
-    }
-  }
+      @media (max-width: 800px) {
+       
+        #resizableInput {
+        display: none;
+        }
+      
+        #rescaleDiv {
+        display: none;
+        }
+      }
   
   /* Form Factors */
   
@@ -157,16 +157,16 @@
   
   /* Resource List */
 
-  dl, dd, dt {
-  margin: 0;
-  padding: 0;
-  }
-  
-  dt {
-  font-weight: bold;
-  }
-  
-  dd {
-  padding: 0 0 1% 0;
-  }
+    dl, dd, dt {
+    margin: 0;
+    padding: 0;
+    }
+    
+    dt {
+    font-weight: bold;
+    }
+    
+    dd {
+    padding: 0 0 1% 0;
+    }
   
