--- a/css/screen.css
+++ b/css/screen.css
@@ -204,9 +204,9 @@
   sca
 */
 
-
+/*
 .wrap {width: 400px; height:300px; padding: 0; overflow: hidden;}
-.frame {border: 1px solid black; width: 1366px; height: 768px;}
+.frame {border: 1px solid black;}
 .frame {
     -moz-transform: scale(0.25);
     -moz-transform-origin: 0 0;
@@ -215,3 +215,41 @@
     -webkit-transform: scale(0.25);
     -webkit-transform-origin: 0 0;
 }
+*/
+
+.wrap {
+  padding: 0; 
+  overflow: hidden;
+}
+
+.frame {
+  -moz-transform-origin: 0 0;
+  -o-transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
+}
+
+#wDisSm {
+}
+
+#mDisSm {
+  width: 320px; 
+  height: 400px;
+}
+
+#wDisMed {
+
+}
+
+#mDisMed {
+  width: 800px; 
+  height: 1280px;
+}
+
+#wDisLar {
+}
+
+#mDisLar {
+  width: 1366px;
+  height: 768px;
+}
+
