--- a/css/screen.css
+++ b/css/screen.css
@@ -246,10 +246,58 @@
 }
 
 #wDisLar {
+  width: 1100px; 
+  height: 650px;
 }
 
 #mDisLar {
   width: 1366px;
   height: 768px;
+ 
+  -moz-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -webkit-transform: scale(0.8);
+  transform: scale(0.8);  
 }
 
+@media screen and (max-width:1150px) {
+
+#wDisLar {
+  width: 800px; 
+  height: 600px;
+}
+
+#mDisLar {
+  -moz-transform: scale(0.5);
+  -o-transform: scale(0.5);
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);  
+}
+
+#wDisMed {
+  width: 500px; 
+  height: 700px;
+}
+
+#mDisMed {
+  -moz-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -webkit-transform: scale(0.8);
+  transform: scale(0.8);  
+}
+}
+
+@media screen and (max-width:600px) {
+
+#wDisLar {
+  width: 400px; 
+  height: 300px;
+}
+
+#mDisLar {
+  -moz-transform: scale(0.25);
+  -o-transform: scale(0.25);
+  -webkit-transform: scale(0.25);
+  transform: scale(0.25);  
+}
+}
