--- a/css/screen.css
+++ b/css/screen.css
@@ -229,8 +229,11 @@
 }
 
 #wDisSm {
+  width: 330px; 
+  height: 405px;
 }
 
+/* ratio = 0.7619047619047619 */
 #mDisSm {
   width: 320px; 
   height: 400px;
@@ -240,16 +243,18 @@
 
 }
 
+/* ratio = 0.625 */
 #mDisMed {
   width: 800px; 
   height: 1280px;
 }
 
 #wDisLar {
-  width: 1100px; 
+  width: 1150px; 
   height: 650px;
 }
 
+/* ratio = 1.778645833333333 */
 #mDisLar {
   width: 1366px;
   height: 768px;
@@ -275,15 +280,15 @@
 }
 
 #wDisMed {
-  width: 500px; 
-  height: 700px;
+  width: 700px; 
+  height: 900px;
 }
 
 #mDisMed {
-  -moz-transform: scale(0.8);
-  -o-transform: scale(0.8);
-  -webkit-transform: scale(0.8);
-  transform: scale(0.8);  
+  -moz-transform: scale(0.7);
+  -o-transform: scale(0.7);
+  -webkit-transform: scale(0.7);
+  transform: scale(0.7);  
 }
 }
 
