Clean up overall styles in stylesheet.

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,6 @@
-﻿/* Helper Styles */
+﻿/* Screen Emulator */
+
+/* Helper Styles */
 
   /* apply a natural box layout model to all elements */
   *, *:before, *:after {
