--- a/css/screen.css
+++ b/css/screen.css
@@ -28,6 +28,10 @@
   a {
   color:  rgba(234,48,4,1);
   }
+  
+  i {
+  font-size: 2em;
+  };
 
 /* Navigation */
 
@@ -152,35 +156,7 @@
         display: none;
         }
       }
-  
-  /* Form Factors */
-
-/*  
-  @media screen and (max-width:700px) {
-    #mDisSm, #mDisMed, #mDisLar {
-    transform: scale(.25);
-    position: relative;
-    left: 0px;
-    }
-    
-    #mDisSm {
-    transform: scale(.5);
-    }
-    
-    #mDisMed {
-    transform: scale(.25);
-    }
-    
-    #mDisLar {
-    transform: scale(.1);
-    }
-    
-    section.presized {
-      padding-bottom: 30%;
-    }
-  }
-*/
-  
+   
   /* Resource List */
 
     dl, dd, dt {
@@ -197,158 +173,143 @@
     }
   
   
-  /* Resize Iframes */
+/* Resize Iframes */
   
-/*
-#mDisSm {
-  height: ;
-  width: ;
-  sca
-*/
+  /* Overall styles for multi-submit frames. */
+  
+    /* Wrapper */
+    .wrap {
+      padding: 0; 
+      overflow: hidden;
+    }
 
-/*
-.wrap {width: 400px; height:300px; padding: 0; overflow: hidden;}
-.frame {border: 1px solid black;}
-.frame {
-    -moz-transform: scale(0.25);
-    -moz-transform-origin: 0 0;
-    -o-transform: scale(0.25);
-    -o-transform-origin: 0 0;
-    -webkit-transform: scale(0.25);
-    -webkit-transform-origin: 0 0;
-}
-*/
+    /* Frame */
+    .frame {
+      -moz-transform-origin: 0 0;
+      -o-transform-origin: 0 0;
+      -webkit-transform-origin: 0 0;
+    }
 
-.wrap {
-  padding: 0; 
-  overflow: hidden;
-}
+  /* Beginning Sizing for Frames */
+  
+   /* Mobile display */
+    #wDisSm {
+      width: 330px; 
+      height: 405px;
+    }
 
-.frame {
-  -moz-transform-origin: 0 0;
-  -o-transform-origin: 0 0;
-  -webkit-transform-origin: 0 0;
-}
+    /* ratio = 0.7619047619047619 */
+    #mDisSm {
+      width: 320px; 
+      height: 400px;
+    }
 
-#wDisSm {
-  width: 330px; 
-  height: 405px;
-}
+   /* Tablet display */
+    #wDisMed {
+    }
 
-/* ratio = 0.7619047619047619 */
-#mDisSm {
-  width: 320px; 
-  height: 400px;
-}
+    /* ratio = 0.625 */
+    #mDisMed {
+      width: 800px; 
+      height: 1280px;
+    }
 
-#wDisMed {
+  /* Desktop display */
+    #wDisLar {
+      width: 1150px; 
+      height: 650px;
+    }
 
-}
+    /* ratio = 1.778645833333333 */
+    #mDisLar {
+      width: 1366px;
+      height: 768px;
+     
+      -moz-transform: scale(0.8);
+      -o-transform: scale(0.8);
+      -webkit-transform: scale(0.8);
+      transform: scale(0.8);  
+    }
 
-/* ratio = 0.625 */
-#mDisMed {
-  width: 800px; 
-  height: 1280px;
-}
+  /* Media Queries */
+  
+    @media screen and (max-width:1150px) {
 
-#wDisLar {
-  width: 1150px; 
-  height: 650px;
-}
+      #wDisLar {
+        width: 800px; 
+        height: 450px;
+      }
 
-/* ratio = 1.778645833333333 */
-#mDisLar {
-  width: 1366px;
-  height: 768px;
- 
-  -moz-transform: scale(0.8);
-  -o-transform: scale(0.8);
-  -webkit-transform: scale(0.8);
-  transform: scale(0.8);  
-}
+      #mDisLar {
+        -moz-transform: scale(0.5);
+        -o-transform: scale(0.5);
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5);  
+      }
 
-@media screen and (max-width:1150px) {
+      #wDisMed {
+        width: 700px; 
+        height: 900px;
+      }
 
-#wDisLar {
-  width: 800px; 
-  height: 450px;
-}
+      #mDisMed {
+        -moz-transform: scale(0.7);
+        -o-transform: scale(0.7);
+        -webkit-transform: scale(0.7);
+        transform: scale(0.7);  
+      }
+    }
 
-#mDisLar {
-  -moz-transform: scale(0.5);
-  -o-transform: scale(0.5);
-  -webkit-transform: scale(0.5);
-  transform: scale(0.5);  
-}
+    @media screen and (max-width:800px) {
 
-#wDisMed {
-  width: 700px; 
-  height: 900px;
-}
+      #wDisLar {
+        width: 600px; 
+        height: 350px;
+      }
 
-#mDisMed {
-  -moz-transform: scale(0.7);
-  -o-transform: scale(0.7);
-  -webkit-transform: scale(0.7);
-  transform: scale(0.7);  
-}
-}
+      #mDisLar {
+        -moz-transform: scale(0.4);
+        -o-transform: scale(0.4);
+        -webkit-transform: scale(0.4);
+        transform: scale(0.4);  
+      }
+    }
 
-@media screen and (max-width:800px) {
+    @media screen and (max-width:600px) {
 
-#wDisLar {
-  width: 600px; 
-  height: 350px;
-}
+      #wDisLar {
+        width: 400px; 
+        height: 250px;
+      }
 
-#mDisLar {
-  -moz-transform: scale(0.4);
-  -o-transform: scale(0.4);
-  -webkit-transform: scale(0.4);
-  transform: scale(0.4);  
-}
-}
+      #mDisLar {
+        -moz-transform: scale(0.25);
+        -o-transform: scale(0.25);
+        -webkit-transform: scale(0.25);
+        transform: scale(0.25);  
+      }
 
+      #wDisMed {
+        width: 350px; 
+        height: 400px;
+      }
 
-@media screen and (max-width:600px) {
+      #mDisMed {
+        -moz-transform: scale(0.3);
+        -o-transform: scale(0.3);
+        -webkit-transform: scale(0.3);
+        transform: scale(0.3);  
+      }
 
-#wDisLar {
-  width: 400px; 
-  height: 250px;
-}
+      #wDisSm {
+        width: 200px; 
+        height: 205px;
+      }
 
-#mDisLar {
-  -moz-transform: scale(0.25);
-  -o-transform: scale(0.25);
-  -webkit-transform: scale(0.25);
-  transform: scale(0.25);  
-}
-
-#wDisMed {
-  width: 350px; 
-  height: 400px;
-}
-
-#mDisMed {
-  -moz-transform: scale(0.3);
-  -o-transform: scale(0.3);
-  -webkit-transform: scale(0.3);
-  transform: scale(0.3);  
-}
-
-#wDisSm {
-  width: 200px; 
-  height: 205px;
-}
-
-#mDisSm {
-  -moz-transform: scale(0.5);
-  -o-transform: scale(0.5);
-  -webkit-transform: scale(0.5);
-  transform: scale(0.5);  
-}
-}
-
-i {
-  font-size: 2em;
-};
+      #mDisSm {
+        -moz-transform: scale(0.5);
+        -o-transform: scale(0.5);
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5);  
+      }
+    }
